--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chart.js": "^2.9.3",
     "compass-mixins": "^0.12.10",
     "ng2-charts": "^2.4.2",
+    "ngx-captcha": "^8.0.1",
     "ngx-pagination": "^5.0.0",
     "node-sass": "^4.14.1",
     "rxjs": "~6.6.3",
